# mangum

./: pyproject.toml  requirements.txt  setup.py
mangum/: adapter.py  utils.py
mangum/protocols/: http.py
tests/: conftest.py  test_lifespan.py
