[tool.poetry]
name = "mangum"
version = "0.1.0"
description = ""
authors = ["Lee Booth <lee.booth@mirrorweb.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
codecov = "^2.1.11"
pytest-cov = "^2.10.1"
black = "^20.8b1"
starlette = "^0.14.1"
Quart = "^0.14.1"
moto = "^1.3.16"
mypy = "^0.790"
Brotli = "^1.0.9"
brotli-asgi = "^1.0.0"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
